--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              
+              "node_modules/primeicons/primeicons.css"
             ]
           },
           "configurations": {
