--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^20.0.0",
     "@primeng/themes": "^20.2.0",
     "@primeuix/themes": "^1.2.5",
+    "chart.js": "^4.5.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
