--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng serve",
+    "build": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng build",
+    "watch": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng build --watch --configuration development",
+    "test": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng test"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +24,7 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@highcharts/map-collection": "^2.3.2",
     "@nebular/eva-icons": "^16.0.0",
     "@nebular/theme": "^16.0.0",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
@@ -35,6 +36,8 @@
     "bootstrap": "^5.3.6",
     "chart.js": "^4.5.0",
     "eva-icons": "^1.1.3",
+    "highcharts": "^12.4.0",
+    "highcharts-angular": "^2.10.0",
     "ng-otp-input": "^2.0.9",
     "primeicons": "^7.0.0",
     "primeng": "^20.2.0",
@@ -44,7 +47,7 @@
   },
   "devDependencies": {
     "@angular/build": "^20.3.4",
-    "@angular/cli": "^20.0.0",
+    "@angular/cli": "^20.3.6",
     "@angular/compiler-cli": "^20.3.4",
     "@angular/localize": "^20.3.4",
     "@iconify/tailwind4": "^1.0.6",
@@ -53,6 +56,7 @@
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.25",
     "flyonui": "^2.4.1",
+    "google-charts": "^2.0.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -61,6 +65,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.3"
   }
 }
