--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eva-icons": "^1.1.3",
     "highcharts": "^12.4.0",
     "highcharts-angular": "^2.10.0",
+    "ledgyx-api": "^1.0.0",
     "ng-otp-input": "^2.0.9",
     "primeicons": "^7.0.0",
     "primeng": "^20.2.0",
@@ -54,7 +55,7 @@
     "@schematics/angular": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
-    "daisyui": "^5.1.25",
+    "daisyui": "^5.3.8",
     "flyonui": "^2.4.1",
     "google-charts": "^2.0.0",
     "jasmine-core": "~5.7.0",
