--- a/angular.json
+++ b/angular.json
@@ -36,11 +36,14 @@
             "styles": [
               "src/styles.scss",
               "node_modules/primeicons/primeicons.css",
-              "node_modules/@nebular/theme/styles/prebuilt/default.css" ,
+              "node_modules/@nebular/theme/styles/prebuilt/default.css",
               "node_modules/@nebular/theme/styles/prebuilt/default.css"
             ],
             "polyfills": [
               "@angular/localize/init"
+            ],
+            "allowedCommonJsDependencies": [
+              "chroma-js"
             ]
           },
           "configurations": {
